--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="/assets/img/profile-img.JPG" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>IT Specialist &amp; Web Developer.</h3>
