--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Scott M. Raymond</h1>
-      <p><span class="typed" data-typed-items="IT Specialist, Developer, Freelancer"></span></p>
+      <p><span class="typed" data-typed-items="IT Specialist, Developer, Freelancer, Educator"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/scott-m-raymond/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
@@ -95,7 +95,7 @@
             <img src="assets/img/profile-img.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>IT Specialist &amp; Web Developer.</h3>
+            <h3>IT Specialist, Web Developer, &amp; Educator.</h3>
             <p>My name is Scott Raymond, and I am an all-around Information Technology specialist, with extensive experience providing technical support for end-users as well as building web applications for my employers and private clients.</p>
             <p>I possess several years of experience supporting individuals from both the Educational and Entertainment industries. These include professors, students, animators, producers, actors, and more!</p>
             <br>
@@ -143,16 +143,16 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="bi bi-archive-fill"></i>
-              <span data-purecounter-start="0" data-purecounter-end="750" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Terabytes of Archived Data</p>
+              <i class="bi bi-book-half"></i>
+              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Years as Classroom Educator</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="5000" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="7500" data-purecounter-duration="1" class="purecounter"></span>
               <p>Hours Of Technical Support</p>
             </div>
           </div>
@@ -251,12 +251,22 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Scott M. Raymond</h4>
-              <p><em>Motivated Information Technology Specialist and Web Developer with 5 years of comprehensive IT consulting and team-based project planning experience. Possesses practical knowledge of best corporate customer service standards, and conscientious scheduling to manage tight deadlines. Applies vast technical knowledge and leadership attitude to improve workplace productivity, find intricate solutions, and reduce IT expenditures</em></p>
+              <p><em>Motivated IT Specialist and Web Developer with 5+ years of experience in IT consulting, project management, and international education. Seeking to leverage technical expertise and cross-cultural communication skills to enhance productivity and foster collaboration.</em></p>
               <ul>
                 <li>scottmraymond94@gmail.com</li>
                 <li>760-524-8243</li>
                 <li>Victorville, CA, USA</li>
                 <li>smraymond.com</li>
+              </ul>
+            </div>
+
+ 	    <h3 class="resume-title">Core Competencies</h3>
+            <div class="resume-item">
+              <h4>Technical Skills and Specialties</h4>
+              <ul>
+                <li>Networking • Windows • MacOS • Linux • Scripting • Virtualization • Active Directory</li>
+                <li>LAMP • HTML/CSS • PHP • JavaScript • jQuery • MySQL • Oracle • Photoshop</li>
+                <li>Cross-Cultural Communication • Educational Program Development • Community Engagement</li>
               </ul>
             </div>
 
@@ -279,6 +289,18 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Assistant Language Teacher</h4>
+              <h5>June, 2021 - August, 2024</h5>
+              <p><em>Hokkaido Board of Education, Noboribetsu, Japan </em></p>
+              <p>Delivered English lessons and cultural exchange programs, enhancing language skills and global perspectives.</p>
+              <ul>
+                <li>English lessons</li>
+                <li>Student counciling</li>
+                <li>Career and University advice</li>
+                <li>Community programs</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Information Technology Specialist</h4>
               <h5>November, 2018 - January, 2021</h5>
               <p><em>Bento Box Entertainment, North Hollywood, CA </em></p>
@@ -296,7 +318,7 @@
               <h4>Information Technology Student Assistant</h4>
               <h5>April, 2016 - June, 2018</h5>
               <p><em>CSUSB, San Bernardino, CA</em></p>
-              <p>Provide excellent administrative technical assistance, support, and consulting for the faculty and staff of the College of Arts and Letters at California State University San Bernardino.</p>
+              <p>Provide administrative technical assistance, support, and consulting for the faculty and staff of the College of Arts and Letters at California State University San Bernardino.</p>
               <ul>
                 <li>Repairing PCs, Macs, and printers</li>
                 <li>Backing-up important faculty data</li>
