--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>scottmraymond94@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>760-524-8243</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Victorville, CA</span></li>
                 </ul>
               </div>
