--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               <div class="location">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Victorville, CA, 92392</p>
+                <p>California</p>
               </div>
 
             </div>
