--- a/index.html
+++ b/index.html
@@ -152,88 +152,24 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="7500" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Technical Support</p>
+              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Years Of Technical Support</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Years of Customer Service</p>
+              <i class="bi bi-brush"></i>
+              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Animated Projects Supported</p>
             </div>
           </div>
+
 
         </div>
 
       </div>
     </section><!-- End Facts Section -->
-
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PHP/Laravel <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">LAMP Cloud Hosting <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -257,6 +193,15 @@
                 <li>760-524-8243</li>
                 <li>Victorville, CA, USA</li>
                 <li>smraymond.com</li>
+              </ul>
+            </div>
+			
+
+		<h3 class="resume-title">Certifications - <a href="https://www.credly.com/users/smraymond" target="_blank">Credly Profile</a></h3>
+            <div class="resume-item">
+              <h4>Google Careers</h4>
+              <ul>
+                <li>Google IT Support Certificate</li>
               </ul>
             </div>
 
@@ -288,6 +233,18 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+			 <div class="resume-item">
+              <h4>Freelance Web Developer</h4>
+              <h5>January, 2021 - Present</h5>
+              <p><em>Remote - USA and Japan </em></p>
+              <p>Develop and maintain custom websites for small businesses, artists, and educators using HTML, CSS, JavaScript, and PHP</p>
+              <ul>
+                <li>Portfolio webpages</li>
+                <li>Inventory management web apps</li>
+                <li>Custom documentation</li>
+                <li>Web hosting and management</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Assistant Language Teacher</h4>
               <h5>June, 2021 - August, 2024</h5>
